# live-bot

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  GEMINI.md  README.md  tauri.conf.json
.cargo/: config.toml
.github/workflows/: release.yml
.golutra/: local.json  workspace.json
.golutra/skills/: project-development-quality-maintainability
.superpowers/brainstorm/78381-1778838097/content/: architecture.html  integrated-design.html
.superpowers/brainstorm/78381-1778838097/state/: server-stopped
assets/models/: sensevoice_int8.tar.bz2  sensevoice_vocab.txt
capabilities/: default.json
chat/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
crates/bilibili-live-protocol/: Cargo.toml
crates/bilibili-live-protocol/src/: lib.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs  text_splitter.rs
crates/voice/src/asr/: backend.rs  mod.rs  sherpa.rs  stabilizer.rs  types.rs  whisperlive.rs
crates/voice/src/audio/: input_processor.rs  latency.rs  mic_capture.rs  mixer.rs  mod.rs  opus_proc.rs  output.rs  tts_frame.rs
crates/voice/src/audio/denoiser/: gtcrn_frequency_denoiser.rs
crates/voice/src/model_hub/: mod.rs
crates/voice/src/pipeline/: frame.rs  mod.rs  processor.rs
crates/voice/src/session/: interrupt.rs  mod.rs  router.rs
crates/voice/src/sherpa_vad/: mod.rs
crates/voice/src/tts/: emotion.rs  local.rs  mod.rs  volc_engine.rs  volc_engine_ws.rs
crates/voice/src/tts/azure/: client.rs  config.rs  types.rs  voice_mapping.rs
crates/voice/src/tts/baidu/: client.rs  config.rs  http_client.rs  mod.rs  types.rs
crates/voice/src/tts/edge/: client.rs  config.rs  mp3_decoder.rs  voice_mapping.rs
crates/voice/src/tts/minimax/: config.rs  http_client.rs  lang.rs  mod.rs  types.rs  voice_library.rs  ws_client.rs
crates/voice/src/voice_changer/: mod.rs  py_worker.rs  rvc.rs  rvc_worker.py
crates/voice/tests/: session_tts.rs
docs/: feature-audit-2026-05-14.md  local-plans-2026-05-14.md  music-interaction-feature.md  operation-manual.md  requirements-design.md  roadmap.md  software-functional-logic.md  song-request-url-scheme-design.md  spec-missing-features.md  technical-architecture.md  technical_solutions.md  ui-design.md  voice-tech-options-2026-05-14.md
docs/adr/: 0001-preserve-raw-live-events-at-protocol-boundary.md
docs/figma/: slint.en.md  slint.md
docs/stitch/: slint.en.md  slint.md
docs/superpowers/plans/: 2026-05-18-music-interaction-completion.md  2026-05-18-music-interaction.md  2026-05-18-react-obs-overlay-runtime.md  2026-05-20-multi-live-platform-core-continuation.md  2026-05-20-multi-live-platform-core.md  2026-05-21-autonomous-desktop-companion-core.md  2026-05-21-multi-platform-rollout-douyu-huya.md
docs/superpowers/specs/: 2026-05-15-autonomous-live-assistant-design.md  2026-05-18-react-obs-overlay-runtime-design.md  2026-05-20-multi-live-platform-design.md  2026-05-20-singer-request-design.md  2026-05-21-autonomous-desktop-companion-core-design.md  2026-05-21-reference-project-feature-roadmap-design.md
icons/: icon.icns
src/: ai_client.rs  api.rs  config.rs  danmaku_chat.html  danmaku_chat_server.rs  gift_effect.html  gift_rank.html  lottery.html  main.rs  music_interaction.html  obs.rs  overlay.html  overlay_config.rs  overlay_react.html  overlay_server.rs  plugin_settings.rs  recent_gifts.html  rvc_export.py  token.rs  wish_goal.html
src-tauri/: Info.plist  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/etc/: bilidanmaku-api.yaml
src-tauri/scripts/: build-dist.mjs  ensure-dist.mjs
src-tauri/src/: main.tsx
src-tauri/src/app/: App.tsx
src-tauri/src/app/components/: BackgroundBlobs.tsx  BackgroundEffects.tsx  Button.tsx  Chip.tsx  ClickRippleEffect.tsx  CursorEffect.tsx  DanmuOverlay.tsx  GlassCard.tsx  IconButton.tsx  Input.tsx  Modal.tsx  NotificationPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  Splash.tsx  SplashScreen.tsx  TextArea.tsx  ThemePanel.tsx  Toggle.tsx  TopBar.tsx  VoicePicker.tsx
src-tauri/src/app/context/: ConfigContext.tsx  LoginContext.tsx  RoomContext.tsx  ThemeContext.tsx
src-tauri/src/app/data/: tts_voices.json
src-tauri/src/app/lib/: api.ts  notify.ts  splashTrigger.ts  voices.ts
src-tauri/src/app/pages/: AI.tsx  Audience.tsx  AutoReply.tsx  ChatOverlay.tsx  DanmakuChat.tsx  Danmu.tsx  Dashboard.tsx  GiftEffect.tsx  GiftRank.tsx  Login.tsx  LotteryInteraction.tsx  Models.tsx  Monitor.tsx  MusicInteraction.tsx  PK.tsx  RecentGifts.tsx  Stats.tsx  System.tsx  Voice.tsx  VoiceChanger.tsx  WishGoal.tsx
src-tauri/src/danmaku-chat/: DanmakuChatRouter.tsx  main.tsx  styles.css
src-tauri/src/danmaku-chat/components/: DanmakuChatFrame.tsx  EmptyState.tsx
src-tauri/src/danmaku-chat/plugins/danmaku/: DanmakuChatView.tsx
src-tauri/src/danmaku-chat/plugins/gift-effect/: GiftEffectView.tsx
src-tauri/src/danmaku-chat/runtime/: fetch.ts  motion.ts  query.ts  types.ts  usePluginSettings.ts
src-tauri/src/imports/: DESIGN.md
src-tauri/src/imports/pasted_text/: live-bot-figma-prompts.md
src-tauri/src/overlay/: OverlayRouter.tsx  main.tsx  styles.css
src-tauri/src/overlay/components/: MarqueeText.tsx  OverlayFrame.tsx
src-tauri/src/overlay/runtime/: fetch.ts  motion.ts  query.ts  types.ts  usePluginSettings.ts
src-tauri/src/styles/: theme.css
src-tauri/token/: bili_refresh_token.txt  bili_token.json  bili_token.txt
src-tauri/windows/: hooks.nsh
src/bot/: engine.rs  memory.rs  mod.rs  monitor.rs  profile_worker.rs  sender.rs  thanks.rs  timed.rs
src/bot/agent/: mod.rs  runtime.rs  tool.rs  tools.rs
src/live_platform/: adapter.rs  auth.rs  error.rs  mod.rs  registry.rs  types.rs
src/live_platform/bilibili/: adapter.rs  events.rs  events_tests.rs  mod.rs
src/music/: command.rs  credits.rs  mod.rs  opener.rs  provider.rs  queue.rs  search.rs  service.rs  storage.rs  types.rs
src/music/providers/: netease.rs
src/music/tests/fixtures/: netease_search.json  netease_song_detail.json
src/storage/: mod.rs
ui/: main.slint
voices/: edge_tts_voice_list.md  minimax.json  tts_voices_list_v2.json  火山引擎 TTS.md
(+17 files in other folders)
