[package]
name = "bili_danmu_robot_rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
members = ["crates/bilibili-live-protocol"]

[dependencies]
anyhow = "1.0.100"
bilibili-live-protocol = { path = "crates/bilibili-live-protocol" }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
cron = "0.16.0"
rand = "0.10.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
slint = "1.16.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.18"

[build-dependencies]
slint-build = "1.16.1"
