[package]
name = "streamix"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
members = ["crates/bilibili-live-protocol", "crates/voice"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
bilibili-live-protocol = { path = "crates/bilibili-live-protocol" }
streamix-voice = { path = "crates/voice", features = ["vad"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
cron = "0.16.0"
rand = "0.10.1"
futures-util = "0.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7.18"
sha2 = "0.10"
tauri = { version = "2.0.0", features = ["tray-icon", "macos-private-api"], optional = true }
tauri-plugin-shell = { version = "2.0.0", optional = true }
tauri-plugin-updater = { version = "2.0", optional = true }
tauri-plugin-process = { version = "2.0", optional = true }
md5 = "0.8.0"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [], optional = true }

[features]
default = ["tauri", "vad", "asr", "playback"]
tauri = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-updater", "dep:tauri-plugin-process"]
vad = ["streamix-voice/vad"]
asr = ["streamix-voice/asr"]
playback = ["streamix-voice/playback"]
