[package]
name = "bilibili-live-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
brotli = "8.0.2"
flate2 = "1.1.9"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
