[package]
name = "streamix-voice"
version = "0.1.0"
edition = "2024"
description = "TTS / ASR / VAD pipeline for Streamix, ported from SquadyAI/RealtimeAPI (Apache-2.0)"

# tts        — Edge / MiniMax / Azure / Baidu / VolcEngine TTS（默认启用）
# asr        — WhisperLive 流式 ASR 客户端（默认启用）
# vad        — sherpa-onnx SenseVoice VAD + ASR（本地 ONNX，按需启用）
# denoiser   — GTCRN 频域降噪（ort + ndarray + rustfft，按需启用）
# voice-changer — RVC AI 变声（ort + ndarray，按需启用）
# playback   — cpal 音频播放（默认启用）
# model-hub  — HuggingFace Hub 模型下载（hf-hub，按需启用）
[features]
default = ["tts", "asr", "playback"]
tts = ["dep:minimp3", "dep:async-stream", "dep:uuid", "dep:lingua"]
asr = []
vad = ["dep:sherpa-onnx", "dep:cpal"]
local-tts = ["dep:sherpa-onnx"]
denoiser = ["dep:ort", "dep:ndarray", "dep:rustfft"]
voice-changer = ["dep:ort", "dep:ndarray", "dep:cpal", "playback"]
playback = ["dep:cpal"]
model-hub = ["dep:hf-hub"]

[dependencies]
# 核心
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

# HTTP + WebSocket
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }

# 异步工具
async-trait = "0.1"
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", features = ["std"] }
futures-util = { version = "0.3", features = ["std", "sink"] }

# 音频处理
opus = { git = "https://github.com/SpaceManiac/opus-rs.git" }
minimp3 = { version = "0.5", optional = true }
bytes = "1.5"
byteorder = "1.5"
hound = "3.5"

# 文本处理
regex = "1"
unicode-segmentation = "1.12"
zhconv = "0.3"
html-escape = "0.2"
urlencoding = "2.1"

# 编码 / 加密（TTS 服务商签名）
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"

# 工具
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
lazy_static = "1.5"
uuid = { version = "1", features = ["v4"], optional = true }
url = "2.5"
num-complex = "0.4"
num-traits = "0.2"
nanoid = "0.4"
parking_lot = "0.12"
rustc-hash = "2.1"
crossbeam-queue = "0.3"

# 语言检测（MiniMax 多语言 TTS）
lingua = { version = "1.7", optional = true }


# 音频播放（可选，需要系统音频设备）
cpal = { version = "0.15", optional = true }

# sherpa-onnx — SenseVoice VAD + ASR（替换 ort + Silero）
sherpa-onnx = { version = "1.12", default-features = false, features = ["shared"], optional = true }

# GTCRN 频域降噪（denoiser feature）
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
rustfft = { version = "6", optional = true }

# HuggingFace Hub 模型下载（model-hub feature）
hf-hub = { version = "0.3", features = ["tokio"], optional = true }
